Ex05: Fix padding and align subgroup

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,9 +20,9 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
-  padding: 20px;
+  padding: 16px;
   display: flex;
-  gap: 20px;
+  gap: 16px;
 }
 
 .icon {
@@ -42,6 +42,7 @@ body {
 .subgroup {
   padding-bottom: 12px;
   display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 
@@ -51,7 +52,7 @@ body {
 }
 
 .text {
-  padding-bottom: 15px;
+  padding-bottom: 16px;
 }
 
 .close-button {
